@@ -1,3 +1,7 @@
+2008-11-19  Adam Nemet  <anemet@caviumnetworks.com>
+
+	* gcc.c-torture/compile/20081119-1.c: New test.
+
 2008-11-19  Dodji Seketeli  <dodji@redhat.com>
 
 	PR c++/35405
